Bug 69518 - GETPIVOTDATA gives #REF! with Constraints syntax
Summary: GETPIVOTDATA gives #REF! with Constraints syntax
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.2.1 rc
Hardware: Other All
: high critical
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.0.1 target:4.1.5
Keywords: regression
: 68632 71234 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-09-18 09:57 UTC by pierre-yves samyn
Modified: 2014-02-07 14:42 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
DataPilotConstraints.ods (11.23 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-09-18 09:57 UTC, pierre-yves samyn
Details
Screenshot DataPilotConstraints OK with OOo (17.38 KB, image/png)
2013-09-18 09:58 UTC, pierre-yves samyn
Details
Screenshot DataPilotConstraints KO with LibO (15.96 KB, image/png)
2013-09-18 09:59 UTC, pierre-yves samyn
Details
LibO_Calc-3.5.7: OK (61.35 KB, image/png)
2013-09-19 18:07 UTC, ape
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2013-09-18 09:57:14 UTC
Created attachment 86056 [details]
DataPilotConstraints.ods

Hello

See also Bug 66655

The fix of Bug 66655 does not solve the problem in all cases, especially with this syntax:

GETPIVOTDATA (pivot table, Constraints)

The attached spreadsheet DataPilotConstraints.ods includes examples of syntax that worked in previous versions and does not work (see screenshots).

Regards
Pierre-Yves
Comment 1 pierre-yves samyn 2013-09-18 09:58:33 UTC
Created attachment 86057 [details]
Screenshot DataPilotConstraints OK with OOo
Comment 2 pierre-yves samyn 2013-09-18 09:59:12 UTC
Created attachment 86058 [details]
Screenshot DataPilotConstraints KO with LibO
Comment 3 ape 2013-09-19 18:07:51 UTC
Created attachment 86154 [details]
LibO_Calc-3.5.7: OK

I confirm this bug:
OS: Windows XP 64-bit Edition SP2; Windows XP Pro\Home SP3
LidreOfficeDev:
1. Win-x86_9-Voreppe libreoffice-4.1.3.0.0+; pull time 2013-09-18 06:54:42; core:03a341775507502dd58598edc3fd805a8518550d 
2. Win-x86@6-debug  LibO-4.2.0.0.alpha0+; pull time 2013-09-05 05:47:55; core:69cd97277cb843d91bc1d1785b23e8c4c8bf6a33

LibreOffice-3.5.7 - OK. This is regression therefor then this is critical bug.
Comment 4 ape 2013-09-20 04:51:00 UTC
LibO-dev-4.0.6.0+ (ID: c0cf51a499ec52b23443393b67425ab557328a9, TinderBox: Win-x86@6-debug, Time: 2013-09-11_22:34:30) hasn't this bug.
Comment 5 pierre-yves samyn 2013-11-17 06:12:07 UTC
*** Bug 71234 has been marked as a duplicate of this bug. ***
Comment 6 retired 2013-11-17 12:11:23 UTC
Is this bug still valid / reproducible with the latest LO release?  Currently 4.1.3.2: http://www.libreoffice.org/download/

Or is this WORKSFORME as of comment #4?
Comment 7 pierre-yves samyn 2013-11-17 14:22:48 UTC
Hello

(In reply to comment #6)
> Is this bug still valid / reproducible with the latest LO release? 
> Currently 4.1.3.2: http://www.libreoffice.org/download/
> 
> Or is this WORKSFORME as of comment #4?

Still reproducible on windows 7/64 with 
- Version: 4.1.3.2 Build ID: 70feb7d99726f064edab4605a8ab840c50ec57a
- Version: 4.2.0.0.alpha0+ Build ID: 7504b3dd8ca4424fd7da91195741b566ce42a2c0
TinderBox: Win-x86@42, Branch:master, Time: 2013-10-30_22:52:21

Regards
Pierre-Yves
Comment 8 ape 2013-11-19 21:13:40 UTC
(In reply to comment #6)
> Is this bug still valid / reproducible with the latest LO release? 
> Currently 4.1.3.2: http://www.libreoffice.org/download/
> 
> Or is this WORKSFORME as of comment #4?

This is the bug LibO-Dev_4.1.4.0 (build 2013-11-18_03.03.02 win_x86) and LibO-Dev_4.2.0.0alpha1 (build 2013-11-17_23.56.08 win x86).
LibreOffice 4.0.6 - OK.
Comment 9 Commit Notification 2013-12-06 16:53:17 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d85c8df2fb9cb25fc524485339ae9f11e8da676

fdo#69518: Correctly handle the old constraint syntax.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-12-06 16:58:50 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a125b9da3035a584ffd2203f2b3c71c972b8bd4c&h=libreoffice-4-2

fdo#69518: Correctly handle the old constraint syntax.


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Kohei Yoshida 2013-12-06 18:25:13 UTC
Fixed.
Comment 12 Commit Notification 2013-12-06 23:09:40 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cfc9cef1e26e98153eb93229a9c18a674a3ebf11&h=libreoffice-4-1

fdo#69518: Correctly handle the old constraint syntax.


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 m.a.riosv 2013-12-09 00:09:18 UTC
Thanks for the fix Kohei.

Works fine in:
Version: 4.1.5.0.0+ Build ID: 812963c5ff6e1c4685eddb830a82a69a3801d82
Version: 4.2.0.0.beta2+ Build ID: 02180aed7dc0b8c5f9cc23b319adc2386a9aab69
         TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2013-12-08_08:48:31
Version: 4.3.0.0.alpha0+ Build ID: c6fe5c6f371328cb6cf61d68f016a04f8b635a48
         TinderBox: Win-x86@39, Branch:master, Time: 2013-12-08_02:58:23
Comment 14 Kohei Yoshida 2013-12-09 21:30:58 UTC
*** Bug 68632 has been marked as a duplicate of this bug. ***
Comment 15 pierre-yves samyn 2013-12-14 09:02:18 UTC
Hello

WORKSFORME with windows 7/64 & Version: 4.2.0.0.beta2+
Build ID: 4031765b004dded31f04c54f9a055b7a3d0053f2
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2013-12-14_01:35:27

Thank you
Regards
Pierre-Yves