fdo#69518: Correctly handle the old constraint syntax.

We apparently support this syntax for ODF-backward compatibility.

To fix this, I resurrected ScDPObject::ParseFilters() which was removed as
unused, adjusted it for the String->OUString change, and changed the filter
data structure to the UNO one rather than using the old one we no longer use
elsewhere.

Change-Id: If52b38aaa1e8b208fb0ef9d92a6e853decdf43e3